Fix alignment of date on desktop

--- a/scss/_single-post.scss
+++ b/scss/_single-post.scss
@@ -159,8 +159,9 @@
         
         .date-author {
             position: absolute;
-            left: 50%;
+            left: 40%;
+
+        }
 
     }
-
 }
